Use Brandeis fonts, add title automatically

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,6 +1,7 @@
 {{ partial "structure/head" . }}
 
 <main>
+    {{with .Title}}<h1 id="{{urlize .}}">{{.}}</h1>{{end -}}
     {{ .Content }}
 </main>
 
