--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,7 +1,9 @@
 {{ partial "structure/head" . }}
 
 <main>
-    Default list
+	{{ partial "navigation/breadcrumbs.html" . }}
+	{{with .Title}}<h1 id="{{urlize .}}">{{.}}</h1>{{end}}
+	{{ .Content }}
 </main>
 
 {{ partial "structure/foot" . }}
