Guru partials, fix breadcrumbs / pagination
- Guru partials
- Better pagination, breadcrumbs (also, breadcrumbs / pagination play
  together nicely now)
- Tweaks

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,9 +1,9 @@
-{{ partial "structure/head" . }}
+{{ partial "guru/head.html" . }}
 
-<main>
-	{{ partial "navigation/breadcrumbs.html" . }}
-	{{with .Title}}<h1 id="{{urlize .}}">{{.}}</h1>{{end}}
-	{{ .Content }}
-</main>
+{{ partial "guru/title.html" .}}
+{{ .Content }}
 
-{{ partial "structure/foot" . }}
+{{$paginator := .Paginate (where .Pages "Section" "==" "")}}
+{{partial "navigation/pagination.html" .}}
+
+{{ partial "guru/foot.html" . }}
