--- a/layouts/partials/seo/above-the-fold.html
+++ b/layouts/partials/seo/above-the-fold.html
@@ -2,7 +2,12 @@
     <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
     <link rel=stylesheet href="http://www.brandeis.edu/_files/css/fonts.css">
     <style amp-custom>
-        {{ partial "stylesheet" | safeCSS }}
+        {{ readFile "assets/rendered/base.css" | safeCSS }}
+        {{ if isset .Params "styles" }}
+                {{ range .Params.styles }}
+                        {{ readFile (printf "assets/rendered/%s.css" .) | safeCSS }}
+                {{ end }}
+        {{ end }}
     </style>
 {{ else }}
     {{ partial "stylesheet.regular" . }}
