--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -3,7 +3,11 @@
 {{ partial "guru/title.html" .}}
 {{ .Content }}
 
-{{$paginator := .Paginate (union .Site.Sections (where .Pages "Section" "eq" .Section))}}
-{{partial "navigation/pagination.html" .}}
+{{ if .Page.IsHome }}
+	{{$paginator := .Paginate (union .Site.Sections (where .Pages "Section" "eq" .Section)) 999}}
+{{ else }}
+	{{$paginator := .Paginate .Pages}}
+{{ end }}
+{{ partial "navigation/pagination.html" . }}
 
 {{ partial "guru/foot.html" . }}
