keyboard shortcuts and favicon tweaks

--- a/layouts/partials/structure/head.html
+++ b/layouts/partials/structure/head.html
@@ -13,7 +13,9 @@
 
     <link rel="canonical" href="{{ .Permalink }}">
 
-    <link rel="icon" href="/favicon.png" type="image/png" sizes="144x144">
+    {{ range .Site.Data.favicons.favicons }}
+        {{- partial "guru/favicon" . }}
+    {{ end }}
 
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 
